Require pygments version >= 2.2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
     { name = "Victor Bonnelle", email = "victor.bonnelle@proton.me" },
 ]
 dependencies = [
-    "pygments",
+    "pygments>=2.2.0",
 ]
 
 [project.urls]
