--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
     { name = "Victor Bonnelle", email = "victor.bonnelle@proton.me" },
 ]
 dependencies = [
+    "click>=8.1.0",
     "pygments>=2.16.0",
 ]
 
