--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "code_to_pdf"
 version = "1.0.0"
-description = "Writes source code into a PDF document."
+description = "Generate PDF documents from source code with syntax highlighting."
 license = "MIT"
 requires-python = ">=3.10"
 authors = [
